Add catalog product image placeholders

--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
             <h4>Гидромотор Danfoss OMS 160</h4>
             <p>Орбитальный, 160 см³, стандартное присоединение.</p>
             <div class="meta">Артикул: OMS160 · В наличии</div>
+            <div class="product-images">
+              <img src="images/danfoss-oms-160-1.svg" alt="Danfoss OMS 160, фото 1" loading="lazy" />
+              <img src="images/danfoss-oms-160-2.svg" alt="Danfoss OMS 160, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss OMS 160">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -166,6 +170,10 @@
             <h4>Гидромотор Danfoss OMR 200</h4>
             <p>Орбитальный, 200 см³, для приводов малого класса.</p>
             <div class="meta">Артикул: OMR200 · Под заказ</div>
+            <div class="product-images">
+              <img src="images/danfoss-omr-200-1.svg" alt="Danfoss OMR 200, фото 1" loading="lazy" />
+              <img src="images/danfoss-omr-200-2.svg" alt="Danfoss OMR 200, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss OMR 200">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -173,6 +181,10 @@
             <h4>Насос Danfoss серии 90 (PV90)</h4>
             <p>Аксиально-поршневой, переменная подача.</p>
             <div class="meta">Артикул: PV90 · Под заказ</div>
+            <div class="product-images">
+              <img src="images/danfoss-pv90-1.svg" alt="Danfoss PV90, фото 1" loading="lazy" />
+              <img src="images/danfoss-pv90-2.svg" alt="Danfoss PV90, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss PV90">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -180,6 +192,10 @@
             <h4>Насос Danfoss H1P 045</h4>
             <p>Закрытый контур, 45 см³, для мобильной техники.</p>
             <div class="meta">Артикул: H1P045 · В наличии</div>
+            <div class="product-images">
+              <img src="images/danfoss-h1p-045-1.svg" alt="Danfoss H1P 045, фото 1" loading="lazy" />
+              <img src="images/danfoss-h1p-045-2.svg" alt="Danfoss H1P 045, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss H1P 045">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -187,6 +203,10 @@
             <h4>Гидромотор Danfoss серии 90 (MVG)</h4>
             <p>Аксиально-поршневой, высокая плотность мощности.</p>
             <div class="meta">Артикул: MVG90 · Под заказ</div>
+            <div class="product-images">
+              <img src="images/danfoss-mvg-90-1.svg" alt="Danfoss MVG 90, фото 1" loading="lazy" />
+              <img src="images/danfoss-mvg-90-2.svg" alt="Danfoss MVG 90, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss MVG 90">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -194,6 +214,10 @@
             <h4>Насос Bosch A10VSO 71</h4>
             <p>Аксиально-поршневой, открытый контур, 71 см³.</p>
             <div class="meta">Артикул: A10VSO71 · В наличии</div>
+            <div class="product-images">
+              <img src="images/bosch-a10vso-71-1.svg" alt="Bosch A10VSO 71, фото 1" loading="lazy" />
+              <img src="images/bosch-a10vso-71-2.svg" alt="Bosch A10VSO 71, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A10VSO 71">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -201,6 +225,10 @@
             <h4>Насос Bosch A4VG 90</h4>
             <p>Закрытый контур, переменная подача, 90 см³.</p>
             <div class="meta">Артикул: A4VG90 · Под заказ</div>
+            <div class="product-images">
+              <img src="images/bosch-a4vg-90-1.svg" alt="Bosch A4VG 90, фото 1" loading="lazy" />
+              <img src="images/bosch-a4vg-90-2.svg" alt="Bosch A4VG 90, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A4VG 90">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -208,6 +236,10 @@
             <h4>Гидромотор Bosch A2FM 63</h4>
             <p>Фиксированный рабочий объем, 63 см³.</p>
             <div class="meta">Артикул: A2FM63 · В наличии</div>
+            <div class="product-images">
+              <img src="images/bosch-a2fm-63-1.svg" alt="Bosch A2FM 63, фото 1" loading="lazy" />
+              <img src="images/bosch-a2fm-63-2.svg" alt="Bosch A2FM 63, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A2FM 63">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -215,6 +247,10 @@
             <h4>Гидромотор Bosch A6VM 107</h4>
             <p>Переменный объем, 107 см³, высокий момент.</p>
             <div class="meta">Артикул: A6VM107 · Под заказ</div>
+            <div class="product-images">
+              <img src="images/bosch-a6vm-107-1.svg" alt="Bosch A6VM 107, фото 1" loading="lazy" />
+              <img src="images/bosch-a6vm-107-2.svg" alt="Bosch A6VM 107, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A6VM 107">Запросить цену</a>
           </article>
           <article class="product-card">
@@ -222,6 +258,10 @@
             <h4>Насос Bosch A11VO 130</h4>
             <p>Открытый контур, 130 см³, для спецтехники.</p>
             <div class="meta">Артикул: A11VO130 · Под заказ</div>
+            <div class="product-images">
+              <img src="images/bosch-a11vo-130-1.svg" alt="Bosch A11VO 130, фото 1" loading="lazy" />
+              <img src="images/bosch-a11vo-130-2.svg" alt="Bosch A11VO 130, фото 2" loading="lazy" />
+            </div>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A11VO 130">Запросить цену</a>
           </article>
         </div>
