--- a/index.html
+++ b/index.html
@@ -156,122 +156,122 @@
         <div class="product-grid">
           <article class="product-card">
             <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-oms-160.html">Гидромотор Danfoss OMS 160</a></h4>
+            <h4><a class="product-link" href="products/danfoss-oms-160.html" target="_blank" rel="noopener">Гидромотор Danfoss OMS 160</a></h4>
             <p>Орбитальный, 160 см³, стандартное присоединение.</p>
             <div class="meta">Артикул: OMS160 · В наличии</div>
-            <a class="product-images product-link" href="products/danfoss-oms-160.html">
+            <a class="product-images product-link" href="products/danfoss-oms-160.html" target="_blank" rel="noopener">
               <img src="images/danfoss-oms-160-1.svg" alt="Danfoss OMS 160, фото 1" loading="lazy" />
               <img src="images/danfoss-oms-160-2.svg" alt="Danfoss OMS 160, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/danfoss-oms-160.html">Подробнее</a>
+            <a class="btn ghost" href="products/danfoss-oms-160.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss OMS 160">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-omr-200.html">Гидромотор Danfoss OMR 200</a></h4>
+            <h4><a class="product-link" href="products/danfoss-omr-200.html" target="_blank" rel="noopener">Гидромотор Danfoss OMR 200</a></h4>
             <p>Орбитальный, 200 см³, для приводов малого класса.</p>
             <div class="meta">Артикул: OMR200 · Под заказ</div>
-            <a class="product-images product-link" href="products/danfoss-omr-200.html">
+            <a class="product-images product-link" href="products/danfoss-omr-200.html" target="_blank" rel="noopener">
               <img src="images/danfoss-omr-200-1.svg" alt="Danfoss OMR 200, фото 1" loading="lazy" />
               <img src="images/danfoss-omr-200-2.svg" alt="Danfoss OMR 200, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/danfoss-omr-200.html">Подробнее</a>
+            <a class="btn ghost" href="products/danfoss-omr-200.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss OMR 200">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-pv90.html">Насос Danfoss серии 90 (PV90)</a></h4>
+            <h4><a class="product-link" href="products/danfoss-pv90.html" target="_blank" rel="noopener">Насос Danfoss серии 90 (PV90)</a></h4>
             <p>Аксиально-поршневой, переменная подача.</p>
             <div class="meta">Артикул: PV90 · Под заказ</div>
-            <a class="product-images product-link" href="products/danfoss-pv90.html">
+            <a class="product-images product-link" href="products/danfoss-pv90.html" target="_blank" rel="noopener">
               <img src="images/danfoss-pv90-1.svg" alt="Danfoss PV90, фото 1" loading="lazy" />
               <img src="images/danfoss-pv90-2.svg" alt="Danfoss PV90, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/danfoss-pv90.html">Подробнее</a>
+            <a class="btn ghost" href="products/danfoss-pv90.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss PV90">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-h1p-045.html">Насос Danfoss H1P 045</a></h4>
+            <h4><a class="product-link" href="products/danfoss-h1p-045.html" target="_blank" rel="noopener">Насос Danfoss H1P 045</a></h4>
             <p>Закрытый контур, 45 см³, для мобильной техники.</p>
             <div class="meta">Артикул: H1P045 · В наличии</div>
-            <a class="product-images product-link" href="products/danfoss-h1p-045.html">
+            <a class="product-images product-link" href="products/danfoss-h1p-045.html" target="_blank" rel="noopener">
               <img src="images/danfoss-h1p-045-1.svg" alt="Danfoss H1P 045, фото 1" loading="lazy" />
               <img src="images/danfoss-h1p-045-2.svg" alt="Danfoss H1P 045, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/danfoss-h1p-045.html">Подробнее</a>
+            <a class="btn ghost" href="products/danfoss-h1p-045.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss H1P 045">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-mvg-90.html">Гидромотор Danfoss серии 90 (MVG)</a></h4>
+            <h4><a class="product-link" href="products/danfoss-mvg-90.html" target="_blank" rel="noopener">Гидромотор Danfoss серии 90 (MVG)</a></h4>
             <p>Аксиально-поршневой, высокая плотность мощности.</p>
             <div class="meta">Артикул: MVG90 · Под заказ</div>
-            <a class="product-images product-link" href="products/danfoss-mvg-90.html">
+            <a class="product-images product-link" href="products/danfoss-mvg-90.html" target="_blank" rel="noopener">
               <img src="images/danfoss-mvg-90-1.svg" alt="Danfoss MVG 90, фото 1" loading="lazy" />
               <img src="images/danfoss-mvg-90-2.svg" alt="Danfoss MVG 90, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/danfoss-mvg-90.html">Подробнее</a>
+            <a class="btn ghost" href="products/danfoss-mvg-90.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Danfoss MVG 90">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a10vso-71.html">Насос Bosch A10VSO 71</a></h4>
+            <h4><a class="product-link" href="products/bosch-a10vso-71.html" target="_blank" rel="noopener">Насос Bosch A10VSO 71</a></h4>
             <p>Аксиально-поршневой, открытый контур, 71 см³.</p>
             <div class="meta">Артикул: A10VSO71 · В наличии</div>
-            <a class="product-images product-link" href="products/bosch-a10vso-71.html">
+            <a class="product-images product-link" href="products/bosch-a10vso-71.html" target="_blank" rel="noopener">
               <img src="images/bosch-a10vso-71-1.svg" alt="Bosch A10VSO 71, фото 1" loading="lazy" />
               <img src="images/bosch-a10vso-71-2.svg" alt="Bosch A10VSO 71, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/bosch-a10vso-71.html">Подробнее</a>
+            <a class="btn ghost" href="products/bosch-a10vso-71.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A10VSO 71">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a4vg-90.html">Насос Bosch A4VG 90</a></h4>
+            <h4><a class="product-link" href="products/bosch-a4vg-90.html" target="_blank" rel="noopener">Насос Bosch A4VG 90</a></h4>
             <p>Закрытый контур, переменная подача, 90 см³.</p>
             <div class="meta">Артикул: A4VG90 · Под заказ</div>
-            <a class="product-images product-link" href="products/bosch-a4vg-90.html">
+            <a class="product-images product-link" href="products/bosch-a4vg-90.html" target="_blank" rel="noopener">
               <img src="images/bosch-a4vg-90-1.svg" alt="Bosch A4VG 90, фото 1" loading="lazy" />
               <img src="images/bosch-a4vg-90-2.svg" alt="Bosch A4VG 90, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/bosch-a4vg-90.html">Подробнее</a>
+            <a class="btn ghost" href="products/bosch-a4vg-90.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A4VG 90">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a2fm-63.html">Гидромотор Bosch A2FM 63</a></h4>
+            <h4><a class="product-link" href="products/bosch-a2fm-63.html" target="_blank" rel="noopener">Гидромотор Bosch A2FM 63</a></h4>
             <p>Фиксированный рабочий объем, 63 см³.</p>
             <div class="meta">Артикул: A2FM63 · В наличии</div>
-            <a class="product-images product-link" href="products/bosch-a2fm-63.html">
+            <a class="product-images product-link" href="products/bosch-a2fm-63.html" target="_blank" rel="noopener">
               <img src="images/bosch-a2fm-63-1.svg" alt="Bosch A2FM 63, фото 1" loading="lazy" />
               <img src="images/bosch-a2fm-63-2.svg" alt="Bosch A2FM 63, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/bosch-a2fm-63.html">Подробнее</a>
+            <a class="btn ghost" href="products/bosch-a2fm-63.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A2FM 63">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a6vm-107.html">Гидромотор Bosch A6VM 107</a></h4>
+            <h4><a class="product-link" href="products/bosch-a6vm-107.html" target="_blank" rel="noopener">Гидромотор Bosch A6VM 107</a></h4>
             <p>Переменный объем, 107 см³, высокий момент.</p>
             <div class="meta">Артикул: A6VM107 · Под заказ</div>
-            <a class="product-images product-link" href="products/bosch-a6vm-107.html">
+            <a class="product-images product-link" href="products/bosch-a6vm-107.html" target="_blank" rel="noopener">
               <img src="images/bosch-a6vm-107-1.svg" alt="Bosch A6VM 107, фото 1" loading="lazy" />
               <img src="images/bosch-a6vm-107-2.svg" alt="Bosch A6VM 107, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/bosch-a6vm-107.html">Подробнее</a>
+            <a class="btn ghost" href="products/bosch-a6vm-107.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A6VM 107">Запросить цену</a>
           </article>
           <article class="product-card">
             <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a11vo-130.html">Насос Bosch A11VO 130</a></h4>
+            <h4><a class="product-link" href="products/bosch-a11vo-130.html" target="_blank" rel="noopener">Насос Bosch A11VO 130</a></h4>
             <p>Открытый контур, 130 см³, для спецтехники.</p>
             <div class="meta">Артикул: A11VO130 · Под заказ</div>
-            <a class="product-images product-link" href="products/bosch-a11vo-130.html">
+            <a class="product-images product-link" href="products/bosch-a11vo-130.html" target="_blank" rel="noopener">
               <img src="images/bosch-a11vo-130-1.svg" alt="Bosch A11VO 130, фото 1" loading="lazy" />
               <img src="images/bosch-a11vo-130-2.svg" alt="Bosch A11VO 130, фото 2" loading="lazy" />
             </a>
-            <a class="btn ghost" href="products/bosch-a11vo-130.html">Подробнее</a>
+            <a class="btn ghost" href="products/bosch-a11vo-130.html" target="_blank" rel="noopener">Подробнее</a>
             <a class="btn primary price-request" href="#contacts" data-product="Bosch A11VO 130">Запросить цену</a>
           </article>
         </div>
