--- a/index.html
+++ b/index.html
@@ -52,9 +52,36 @@
           <h3>Быстрый подбор</h3>
           <p>Заполните параметры — получите 3 варианта с ценами и сроками.</p>
           <form class="quick-form">
-            <input type="text" placeholder="Тип агрегата" />
-            <input type="text" placeholder="Производительность / объем" />
-            <input type="text" placeholder="Марка техники" />
+            <label class="form-field">
+              <span>Бренд</span>
+              <select required>
+                <option value="">Выберите бренд</option>
+                <option>Bosch Rexroth</option>
+                <option>Danfoss</option>
+                <option>Parker</option>
+                <option>Eaton</option>
+                <option>Casappa</option>
+              </select>
+            </label>
+            <label class="form-field">
+              <span>Тип товара</span>
+              <select required>
+                <option value="">Выберите тип</option>
+                <option>Гидромотор</option>
+                <option>Гидронасос</option>
+              </select>
+            </label>
+            <label class="form-field">
+              <span>Производительность / объём</span>
+              <select required>
+                <option value="">Выберите значение</option>
+                <option>28 см³/об</option>
+                <option>45 см³/об</option>
+                <option>55 см³/об</option>
+                <option>80 см³/об</option>
+                <option>100 см³/об</option>
+              </select>
+            </label>
             <button class="btn primary" type="submit">Получить подбор</button>
           </form>
           <div class="form-status" aria-live="polite"></div>
@@ -79,202 +106,36 @@
             <p>Насосы высокого давления, тандемы, навесное.</p>
             <a class="btn ghost" href="#catalog">Перейти</a>
           </article>
-          <article class="card">
-            <h3>Редукторы и КПП</h3>
-            <p>Планетарные редукторы, поворотные узлы.</p>
-            <a class="btn ghost" href="#catalog">Перейти</a>
-          </article>
-          <article class="card">
-            <h3>Запчасти и комплектующие</h3>
-            <p>Ремкомплекты, валы, подшипники, уплотнения.</p>
-            <a class="btn ghost" href="#catalog">Перейти</a>
-          </article>
-        </div>
-        <div class="catalog-switcher">
-          <div class="section-title">
-            <h3>Каталоги по типам</h3>
-            <p>Переключайтесь между страницами, чтобы быстро перейти к нужному разделу.</p>
-          </div>
-          <div class="catalog-tabs" role="tablist" aria-label="Каталоги по типам">
-            <button class="catalog-tab is-active" type="button" role="tab" aria-selected="true" data-page="motors">Гидромоторы</button>
-            <button class="catalog-tab" type="button" role="tab" aria-selected="false" data-page="pumps">Гидронасосы</button>
-            <button class="catalog-tab" type="button" role="tab" aria-selected="false" data-page="reducers">Редукторы</button>
-            <button class="catalog-tab" type="button" role="tab" aria-selected="false" data-page="parts">Запчасти</button>
-          </div>
-          <div class="catalog-pages">
-            <article class="catalog-page is-active" role="tabpanel" data-page="motors">
-              <div>
-                <h4>Гидромоторы</h4>
-                <p>Каталог с фильтрами по объему, типу корпуса и моменту. Подберем аналог под вашу технику.</p>
-              </div>
-              <div class="catalog-page-actions">
-                <span class="catalog-meta">Категорий: 18 · В наличии: 56</span>
-                <a class="btn primary" href="#contacts">Подобрать гидромотор</a>
-              </div>
-            </article>
-            <article class="catalog-page" role="tabpanel" data-page="pumps">
-              <div>
-                <h4>Гидронасосы</h4>
-                <p>Открытый и закрытый контур, тандемы и навесные решения. Предлагаем варианты по цене и срокам.</p>
-              </div>
-              <div class="catalog-page-actions">
-                <span class="catalog-meta">Категорий: 22 · В наличии: 42</span>
-                <a class="btn primary" href="#contacts">Подобрать насос</a>
-              </div>
-            </article>
-            <article class="catalog-page" role="tabpanel" data-page="reducers">
-              <div>
-                <h4>Редукторы и КПП</h4>
-                <p>Планетарные редукторы, поворотные узлы, приводные решения для спецтехники.</p>
-              </div>
-              <div class="catalog-page-actions">
-                <span class="catalog-meta">Категорий: 9 · В наличии: 18</span>
-                <a class="btn primary" href="#contacts">Подобрать редуктор</a>
-              </div>
-            </article>
-            <article class="catalog-page" role="tabpanel" data-page="parts">
-              <div>
-                <h4>Запчасти и комплектующие</h4>
-                <p>Ремкомплекты, уплотнения, валы и подшипники с быстрой отгрузкой.</p>
-              </div>
-              <div class="catalog-page-actions">
-                <span class="catalog-meta">Категорий: 34 · В наличии: 120</span>
-                <a class="btn primary" href="#contacts">Подобрать запчасти</a>
-              </div>
-            </article>
-          </div>
-          <div class="catalog-pagination" aria-label="Навигация между каталогами">
-            <button class="btn ghost catalog-prev" type="button">Предыдущая</button>
-            <span class="catalog-progress" aria-live="polite">Страница 1 из 4</span>
-            <button class="btn ghost catalog-next" type="button">Следующая</button>
-          </div>
         </div>
         <div class="section-title catalog-title">
-          <h3>Примеры товаров (Danfoss и Bosch)</h3>
-          <p>Десять предполагаемых позиций для старта каталога.</p>
+          <h3>Каталог гидромоторов и гидронасосов</h3>
+          <p>Выберите бренд, тип и наличие, чтобы увидеть подходящие позиции.</p>
         </div>
-        <div class="product-grid">
-          <article class="product-card">
-            <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-oms-160.html" target="_blank" rel="noopener">Гидромотор Danfoss OMS 160</a></h4>
-            <p>Орбитальный, 160 см³, стандартное присоединение.</p>
-            <div class="meta">Артикул: OMS160 · В наличии</div>
-            <a class="product-images product-link" href="products/danfoss-oms-160.html" target="_blank" rel="noopener">
-              <img src="images/danfoss-oms-160-1.svg" alt="Danfoss OMS 160, фото 1" loading="lazy" />
-              <img src="images/danfoss-oms-160-2.svg" alt="Danfoss OMS 160, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/danfoss-oms-160.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Danfoss OMS 160">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-omr-200.html" target="_blank" rel="noopener">Гидромотор Danfoss OMR 200</a></h4>
-            <p>Орбитальный, 200 см³, для приводов малого класса.</p>
-            <div class="meta">Артикул: OMR200 · Под заказ</div>
-            <a class="product-images product-link" href="products/danfoss-omr-200.html" target="_blank" rel="noopener">
-              <img src="images/danfoss-omr-200-1.svg" alt="Danfoss OMR 200, фото 1" loading="lazy" />
-              <img src="images/danfoss-omr-200-2.svg" alt="Danfoss OMR 200, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/danfoss-omr-200.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Danfoss OMR 200">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-pv90.html" target="_blank" rel="noopener">Насос Danfoss серии 90 (PV90)</a></h4>
-            <p>Аксиально-поршневой, переменная подача.</p>
-            <div class="meta">Артикул: PV90 · Под заказ</div>
-            <a class="product-images product-link" href="products/danfoss-pv90.html" target="_blank" rel="noopener">
-              <img src="images/danfoss-pv90-1.svg" alt="Danfoss PV90, фото 1" loading="lazy" />
-              <img src="images/danfoss-pv90-2.svg" alt="Danfoss PV90, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/danfoss-pv90.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Danfoss PV90">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-h1p-045.html" target="_blank" rel="noopener">Насос Danfoss H1P 045</a></h4>
-            <p>Закрытый контур, 45 см³, для мобильной техники.</p>
-            <div class="meta">Артикул: H1P045 · В наличии</div>
-            <a class="product-images product-link" href="products/danfoss-h1p-045.html" target="_blank" rel="noopener">
-              <img src="images/danfoss-h1p-045-1.svg" alt="Danfoss H1P 045, фото 1" loading="lazy" />
-              <img src="images/danfoss-h1p-045-2.svg" alt="Danfoss H1P 045, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/danfoss-h1p-045.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Danfoss H1P 045">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Danfoss</span>
-            <h4><a class="product-link" href="products/danfoss-mvg-90.html" target="_blank" rel="noopener">Гидромотор Danfoss серии 90 (MVG)</a></h4>
-            <p>Аксиально-поршневой, высокая плотность мощности.</p>
-            <div class="meta">Артикул: MVG90 · Под заказ</div>
-            <a class="product-images product-link" href="products/danfoss-mvg-90.html" target="_blank" rel="noopener">
-              <img src="images/danfoss-mvg-90-1.svg" alt="Danfoss MVG 90, фото 1" loading="lazy" />
-              <img src="images/danfoss-mvg-90-2.svg" alt="Danfoss MVG 90, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/danfoss-mvg-90.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Danfoss MVG 90">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a10vso-71.html" target="_blank" rel="noopener">Насос Bosch A10VSO 71</a></h4>
-            <p>Аксиально-поршневой, открытый контур, 71 см³.</p>
-            <div class="meta">Артикул: A10VSO71 · В наличии</div>
-            <a class="product-images product-link" href="products/bosch-a10vso-71.html" target="_blank" rel="noopener">
-              <img src="images/bosch-a10vso-71-1.svg" alt="Bosch A10VSO 71, фото 1" loading="lazy" />
-              <img src="images/bosch-a10vso-71-2.svg" alt="Bosch A10VSO 71, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/bosch-a10vso-71.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Bosch A10VSO 71">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a4vg-90.html" target="_blank" rel="noopener">Насос Bosch A4VG 90</a></h4>
-            <p>Закрытый контур, переменная подача, 90 см³.</p>
-            <div class="meta">Артикул: A4VG90 · Под заказ</div>
-            <a class="product-images product-link" href="products/bosch-a4vg-90.html" target="_blank" rel="noopener">
-              <img src="images/bosch-a4vg-90-1.svg" alt="Bosch A4VG 90, фото 1" loading="lazy" />
-              <img src="images/bosch-a4vg-90-2.svg" alt="Bosch A4VG 90, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/bosch-a4vg-90.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Bosch A4VG 90">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a2fm-63.html" target="_blank" rel="noopener">Гидромотор Bosch A2FM 63</a></h4>
-            <p>Фиксированный рабочий объем, 63 см³.</p>
-            <div class="meta">Артикул: A2FM63 · В наличии</div>
-            <a class="product-images product-link" href="products/bosch-a2fm-63.html" target="_blank" rel="noopener">
-              <img src="images/bosch-a2fm-63-1.svg" alt="Bosch A2FM 63, фото 1" loading="lazy" />
-              <img src="images/bosch-a2fm-63-2.svg" alt="Bosch A2FM 63, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/bosch-a2fm-63.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Bosch A2FM 63">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a6vm-107.html" target="_blank" rel="noopener">Гидромотор Bosch A6VM 107</a></h4>
-            <p>Переменный объем, 107 см³, высокий момент.</p>
-            <div class="meta">Артикул: A6VM107 · Под заказ</div>
-            <a class="product-images product-link" href="products/bosch-a6vm-107.html" target="_blank" rel="noopener">
-              <img src="images/bosch-a6vm-107-1.svg" alt="Bosch A6VM 107, фото 1" loading="lazy" />
-              <img src="images/bosch-a6vm-107-2.svg" alt="Bosch A6VM 107, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/bosch-a6vm-107.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Bosch A6VM 107">Запросить цену</a>
-          </article>
-          <article class="product-card">
-            <span class="brand-pill">Bosch Rexroth</span>
-            <h4><a class="product-link" href="products/bosch-a11vo-130.html" target="_blank" rel="noopener">Насос Bosch A11VO 130</a></h4>
-            <p>Открытый контур, 130 см³, для спецтехники.</p>
-            <div class="meta">Артикул: A11VO130 · Под заказ</div>
-            <a class="product-images product-link" href="products/bosch-a11vo-130.html" target="_blank" rel="noopener">
-              <img src="images/bosch-a11vo-130-1.svg" alt="Bosch A11VO 130, фото 1" loading="lazy" />
-              <img src="images/bosch-a11vo-130-2.svg" alt="Bosch A11VO 130, фото 2" loading="lazy" />
-            </a>
-            <a class="btn ghost" href="products/bosch-a11vo-130.html" target="_blank" rel="noopener">Подробнее</a>
-            <a class="btn primary price-request" href="#contacts" data-product="Bosch A11VO 130">Запросить цену</a>
-          </article>
+        <div class="catalog-filters" aria-label="Фильтры каталога">
+          <label>
+            Бренд
+            <select id="filter-brand">
+              <option value="all">Все</option>
+            </select>
+          </label>
+          <label>
+            Тип товара
+            <select id="filter-type">
+              <option value="all">Все</option>
+              <option value="Гидромотор">Гидромоторы</option>
+              <option value="Гидронасос">Гидронасосы</option>
+            </select>
+          </label>
+          <label>
+            Наличие
+            <select id="filter-stock">
+              <option value="all">Все</option>
+              <option value="В наличии">В наличии</option>
+              <option value="Под заказ">Под заказ</option>
+            </select>
+          </label>
         </div>
+        <div class="product-grid" id="product-grid"></div>
       </div>
     </section>
 
