Add update badge on homepage

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       </div>
     </div>
   </header>
+  <div class="update-badge" aria-live="polite">
+    <strong>Изменение №2</strong>
+    <span>Добавлен индикатор обновлений на главной странице.</span>
+  </div>
 
   <main>
     <section class="hero">
